<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".activities.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="Product Details"
        app:titleTextColor="?colorOnPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/product_image"
                android:transitionName="@string/product_image"
                tools:src="@color/black" />

            <TextView
                android:id="@+id/txtTitle"
                style="@style/Theme.MyTitleLargeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:layout_toStartOf="@id/txtPrice"
                android:layout_toEndOf="@id/imgProduct"
                android:textStyle="bold"
                android:transitionName="@string/product_title"
                tools:text="iPhone X" />

            <LinearLayout
                android:id="@+id/linearRatings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toStartOf="@id/txtPriceDiscount"
                android:layout_toEndOf="@id/imgProduct"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/price_background"
                    android:backgroundTint="@color/my_orange_dark"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        style="@style/Theme.MyTitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/rating"
                        android:textColor="@color/my_background_white" />

                    <TextView
                        android:id="@+id/txtRating"
                        style="@style/Theme.MyTitleMediumBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/my_background_white"
                        tools:text="1.5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/price_background"
                    android:backgroundTint="@color/my_orange_dark"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtStock"
                        style="@style/Theme.MyTitleMediumBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/my_background_white"
                        tools:text="1.5" />


                    <TextView
                        style="@style/Theme.MyTitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/items_left"
                        android:textColor="@color/my_background_white" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtPrice"
                style="@style/Theme.MyTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/price_background"
                android:gravity="center"
                android:minWidth="70dp"
                android:paddingVertical="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:textColor="@color/white"
                tools:text="549" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPriceDiscount"
                style="@style/Theme.MyTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPrice"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:minWidth="70dp"
                android:paddingHorizontal="5dp"
                android:textColor="@android:color/holo_red_dark"
                tools:text="From 549" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_half_circle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Theme.MyTitleMediumBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/description"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtDescription"
                    style="@style/Theme.MyTitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/black"
                    tools:text="Description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/price_background"
                        android:backgroundTint="@color/my_orange_light"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtCategory"
                            style="@style/Theme.MyBodyLargeBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Category" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/price_background"
                        android:backgroundTint="@color/my_blue"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtBrand"
                            style="@style/Theme.MyBodyLargeBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/my_background_white"
                            tools:text="Brand" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/brand"
                            android:textColor="@color/my_background_white" />
                    </LinearLayout>
                </LinearLayout>


                <TextView
                    style="@style/Theme.MyTitleMediumBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/product_gallery"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:orientation="horizontal"
                    android:overScrollMode="always"
                    android:paddingBottom="10dp"
                    android:scrollbarFadeDuration="0"
                    android:scrollbarSize="5dp"
                    android:scrollbars="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/layout_product_image" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</LinearLayout>